# angularfire2

./: BUILD.bazel  WORKSPACE  package.json
src/: tsconfig.json
src/auth/: BUILD.bazel
src/core/: BUILD.bazel
src/database/: BUILD.bazel
src/firestore/: BUILD.bazel
src/storage/: BUILD.bazel
test/: BUILD.bazel  init_node_spec.ts
tools/: bazel.rc  defaults.bzl  package.json
